# sentinel-spark-embedding

./: .gitignore  README.md  app.py  build.sh  cdk.context.json  cdk.json  config.yaml  pyproject.toml  pyspark_sedona_new.ipynb  requirements.txt  runner.py
dags/: sentinel_processing_dag.py
docker/: Dockerfile  Dockerfile.build  requirements.txt
infra/: __init__.py  sentinel_stack.py
notebooks/: Untitled.ipynb  chip_viewer.html
scripts/: build.sh  install.sh
src/config/: config.py
src/infra/: emr.py  emr_gpu_stack.py  opensearch.py  permissions.py  sentinel_stack.py  stack.py  storage.py  vpc.py
src/jobs/: chip_extraction.py  embedding_generation.py  temporal_merge.py
src/lib/: raster_utils.py  run_job.py  sedona_utils.py
src/sentinel_processing/: config.py  config.yaml
src/sentinel_processing/jobs/: change_detection.py  chip_extraction.py  embedding_generation.py  opensearch_ingestion.py
src/sentinel_processing/lib/: clay_utils.py  emr_utils.py  raster_utils.py  sedona_utils.py
web/: index.html
