[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-processing"
version = "0.1.0"
description = "Sentinel-2 chip processing pipeline"
dynamic = ["optional-dependencies"]

[tool.setuptools.dynamic]
optional-dependencies.dev = {file = ["docker/requirements.txt", "requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]