[build-system]
requires = ["setuptools>=61.0", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-processing"
version = "0.1.0"
description = "Sentinel-2 chip processing pipeline"
requires-python = "==3.12.*"
dependencies = [
    "omegaconf==2.3.0",
    "boto3==1.40.25",
    "venv-pack==0.2.0",
    "uv==0.8.17"
]

[project.optional-dependencies]
# Base ML stack
ml-base = [
    "torch==2.4.0",
    "torchvision==0.19.0",
    "transformers",
    "timm",
    "einops"
]

# Jobs
extraction = [
    "apache-sedona==1.7.2",
    "rasterio[s3]==1.4.3",
    "pystac==1.14.0",
    "pyarrow>=4.0.0"
]

embedding = [
    "sentinel-processing[ml-base]",
    "claymodel @ git+https://github.com/Clay-foundation/model.git"
]

ingestion = [
    "opensearch-py==3.0.0"
]

# Deploy CDK stack
deploy = [
    "aws-cdk-lib==2.215.0",
    "constructs==10.4.2"
]

# Build jobs and their dependencies
build = [
    "sentinel-processing[extraction,embedding,ingestion]"
]

# Local dev environment
dev = [
    "sentinel-processing[deploy,build]",
    "pyspark==3.5.3"
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.setuptools.package-data]
"sentinel_processing" = ["config.yaml"]

[tool.uv]
index-url = "https://pypi.org/simple"
compile-bytecode = true